--- a/ml-basics/04 - Clustering/ottr_solutions_notebooks/instructor/04_Clustering_Solution_Ottr.ipynb
+++ b/ml-basics/04 - Clustering/ottr_solutions_notebooks/instructor/04_Clustering_Solution_Ottr.ipynb
@@ -20,7 +20,8 @@
             "outputs": [],
             "source": [
                 "# Load the core tidyverse and make it available in your current R session\n",
-                "library(tidyverse)\n",
+                "suppressPackageStartupMessages(\n",
+                "  library(tidyverse))\n",
                 "\n",
                 "# Read the csv file into a tibble\n",
                 "clust_data <- read_csv(file = \"https://raw.githubusercontent.com/MicrosoftDocs/ml-basics/master/challenges/data/clusters.csv\", show_col_types = FALSE)\n",
@@ -77,7 +78,8 @@
             "source": [
                 "set.seed(2056)\n",
                 "# Load the core tidymodels packages and make them available in your current R session\n",
-                "library(tidymodels)\n",
+                "suppressPackageStartupMessages(\n",
+                "  library(tidymodels))\n",
                 "\n",
                 "# Specify a recipe\n",
                 "pca_rec <- recipe(~ ., data = clust_data) %>%\n",
@@ -117,8 +119,16 @@
                 "})\n",
                 "\n",
                 "## Test ##\n",
-                "test_that('data dimensions correct', {\n",
-                "  expect_output(invisible(print(pca_rec)), \"Recipe\\n\\nInputs:\\n\\n\\nOperations:\\n\\nCentering and scaling for all_predictors()\\nNo PCA components were extracted.\", fixed = TRUE)\n",
+                "test_that('recipe specification is correct', {\n",
+                "  \n",
+                "  # Test for step_normalize\n",
+                "  expect_equal(attr(pca_rec[[\"steps\"]][[1]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(pca_rec[[\"steps\"]][[1]][[\"terms\"]][[1]]), \"all_predictors()\")\n",
+                "  \n",
+                "  # Test for step_pca\n",
+                "  expect_equal(attr(pca_rec[[\"steps\"]][[2]], \"class\"), c(\"step_pca\",\"step\"))\n",
+                "  expect_equal(pca_rec[[\"steps\"]][[2]]$num_comp, 2)\n",
+                "  expect_equal(as_label(pca_rec[[\"steps\"]][[2]][[\"terms\"]][[1]]), \"all_predictors()\")\n",
                 "  \n",
                 "})\n"
             ]
@@ -197,10 +207,20 @@
                 "\n",
                 "\n",
                 "## Test ##\n",
-                "test_that('prep and bake results are correct', {\n",
-                "  expect_output(invisible(print(pca_estimates)), \"Recipe\\n\\nInputs:\\n\\n\\nTraining data contained 1000 data points and no missing data.\\n\\nOperations:\\n\\nCentering and scaling for A, B, C [trained]\\nPCA extraction with A, B, C [trained]\", fixed = TRUE)\n",
-                "  expect_equal(dim(features_2d), c(1000, 2))\n",
+                "test_that('recipe specification is correct', {\n",
+                "  # Test for step_normalize\n",
+                "  expect_equal(attr(pca_estimates[[\"steps\"]][[1]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(pca_estimates[[\"steps\"]][[1]][[\"terms\"]][[1]]), \"all_predictors()\")\n",
+                "  expect_true(pca_estimates[[\"steps\"]][[1]]$trained)\n",
                 "  \n",
+                "  # Test for step_pca\n",
+                "  expect_equal(attr(pca_estimates[[\"steps\"]][[2]], \"class\"), c(\"step_pca\",\"step\"))\n",
+                "  expect_equal(pca_estimates[[\"steps\"]][[2]]$num_comp, 2)\n",
+                "  expect_equal(as_label(pca_estimates[[\"steps\"]][[2]][[\"terms\"]][[1]]), \"all_predictors()\")\n",
+                "  expect_true(pca_estimates[[\"steps\"]][[2]]$trained)\n",
+                "  \n",
+                "  # Test dimension of PCA results\n",
+                "  expect_equal(dim(features_2d), c(1000, 2))\n",
                 "  \n",
                 "})\n"
             ]
@@ -513,9 +533,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Load plotting libraries \n",
-                "library(plotly)\n",
-                "library(paletteer)\n",
+                "# Load plotting libraries\n",
+                "suppressPackageStartupMessages({\n",
+                "  library(plotly)\n",
+                "  library(paletteer)\n",
+                "  \n",
+                "})\n",
+                "\n",
                 "\n",
                 "\n",
                 "# Augment featured_2d with information from the clustering model\n",
