--- a/ml-basics/04 - Clustering/ottr_solutions_notebooks/student/04_Clustering_Solution_Ottr_Learner.ipynb
+++ b/ml-basics/04 - Clustering/ottr_solutions_notebooks/student/04_Clustering_Solution_Ottr_Learner.ipynb
@@ -20,7 +20,8 @@
             "outputs": [],
             "source": [
                 "# Load the core tidyverse and make it available in your current R session\n",
-                "library(tidyverse)\n",
+                "suppressPackageStartupMessages(\n",
+                "  library(tidyverse))\n",
                 "\n",
                 "# Read the csv file into a tibble\n",
                 "clust_data <- read_csv(file = \"https://raw.githubusercontent.com/MicrosoftDocs/ml-basics/master/challenges/data/clusters.csv\", show_col_types = FALSE)\n",
@@ -58,14 +59,15 @@
             "source": [
                 "set.seed(2056)\n",
                 "# Load the core tidymodels packages and make them available in your current R session\n",
-                "library(tidymodels)\n",
+                "suppressPackageStartupMessages(\n",
+                "  library(tidymodels))\n",
                 "\n",
                 "# Specify a recipe\n",
                 "pca_rec <- recipe(____, data = clust_data) %>%\n",
                 "  # Recipe step for normalizing predictors\n",
                 "  ____(all_predictors()) %>% \n",
-                "  # Recipe step for converting all predictors into 2 PCs\n",
-                "  step_pca(____, num_comp = ____, id = \"pca\")\n",
+                "  # Recipe step for converting all predictors into 2 Principal Components\n",
+                "  ____(____, num_comp = ____, id = \"pca\")\n",
                 "\n",
                 "# Print out recipe\n",
                 "pca_rec\n"
@@ -225,7 +227,7 @@
                 "  # Prep the recipe\n",
                 "  ____ %>% \n",
                 "  # Apply trained recipe to train set: clust_data\n",
-                "  bake(new_data = NULL)\n",
+                "  ____\n",
                 "\n",
                 "# Print out data\n",
                 "clust_estimate_data %>% \n",
@@ -374,8 +376,11 @@
             "outputs": [],
             "source": [
                 "# Load plotting libraries \n",
-                "library(plotly)\n",
-                "library(paletteer)\n",
+                "suppressPackageStartupMessages({\n",
+                "  library(plotly)\n",
+                "  library(paletteer)\n",
+                "  \n",
+                "})\n",
                 "\n",
                 "\n",
                 "# Augment featured_2d with information from the clustering model\n",
@@ -414,7 +419,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -652,17 +659,6 @@
                 "Happy Learning,\n",
                 "\n",
                 "[Eric](https://twitter.com/ericntay), Gold Microsoft Learn Student Ambassador.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "library(here)\n",
-                "library(rmd2jupyter)\n",
-                "rmd2jupyter(\"04_Clustering_Solution_Ottr_Learner.Rmd\")\n"
             ]
         }
     ],
