--- a/ml-basics/03 - Classification/ottr_solutions_notebooks/instructor/03_Classification_Solution_Ottr.ipynb
+++ b/ml-basics/03 - Classification/ottr_solutions_notebooks/instructor/03_Classification_Solution_Ottr.ipynb
@@ -76,7 +76,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -195,7 +197,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -462,7 +466,9 @@
                 "\n",
                 "## Test ##\n",
                 "test_that('recipe specification is correct', {\n",
-                "  expect_output(invisible(print(wine_recipe)), \"Recipe\\n\\nInputs:\\n\\n\\nOperations:\\n\\nCentering and scaling for all_numeric_predictors()\", fixed = TRUE)\n",
+                "  expect_equal(attr(wine_recipe[[\"steps\"]][[1]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(wine_recipe[[\"steps\"]][[1]][[\"terms\"]][[1]]), \"all_numeric_predictors()\")\n",
+                "  \n",
                 "  \n",
                 "  expect_equal(summary(wine_recipe) %>% filter(variable == \"wine_variety\") %>% pull(role), \"outcome\")\n",
                 "})\n"
@@ -491,7 +497,13 @@
                 "\n",
                 "## Test ##\n",
                 "test_that('workflow specification is correct', {\n",
-                "  expect_output(print(mr_wflow), \"== Workflow ====================================================================\\nPreprocessor: Recipe\\nModel: multinom_reg()\\n\\n-- Preprocessor ----------------------------------------------------------------\\n1 Recipe Step\\n\\n* step_normalize()\\n\\n-- Model -----------------------------------------------------------------------\\nMultinomial Regression Model Specification (classification)\\n\\n\", fixed = TRUE)\n",
+                "  # Test whether wf has a recipe\n",
+                "  expect_equal(attr(mr_wflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[1]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(mr_wflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[1]][[\"terms\"]][[1]]), \"all_numeric_predictors()\")\n",
+                "  \n",
+                "  # Test whether wf has model spec\n",
+                "expect_equal(mr_wflow[[\"fit\"]][[\"actions\"]][[\"model\"]][[\"spec\"]][[\"mode\"]], \"classification\")\n",
+                "expect_equal(mr_wflow[[\"fit\"]][[\"actions\"]][[\"model\"]][[\"spec\"]][[\"engine\"]], \"nnet\")\n",
                 "  \n",
                 "})\n"
             ]
@@ -573,7 +585,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -831,7 +845,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -927,7 +943,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -956,17 +974,6 @@
                 "\n",
                 "[Eric](https://twitter.com/ericntay), Gold Microsoft Learn Student Ambassador.\n"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "library(here)\n",
-                "library(rmd2jupyter)\n",
-                "rmd2jupyter(\"03_Classification_Solution_Ottr.Rmd\")\n"
-            ]
         }
     ],
     "metadata": {
@@ -974,6 +981,7 @@
         "kernelspec": {
             "display_name": "R",
             "langauge": "R",
+            "language": "R",
             "name": "ir"
         },
         "language_info": {
