--- a/ml-basics/04 - Clustering/ottr_solutions_notebooks/student/04_Clustering_Solution_Ottr_Learner.ipynb
+++ b/ml-basics/04 - Clustering/ottr_solutions_notebooks/student/04_Clustering_Solution_Ottr_Learner.ipynb
@@ -223,7 +223,7 @@
                 "# Obtain normalized Data for estimating clusters\n",
                 "clust_estimate_data <- recipe(~ ., data = clust_data) %>%\n",
                 "  # Step to normalize all predictors\n",
-                "  ____ %>% \n",
+                "  ____(all_predictors()) %>% \n",
                 "  # Prep the recipe\n",
                 "  ____ %>% \n",
                 "  # Apply trained recipe to train set: clust_data\n",
