--- a/ml-basics/02 - Regression/ottr_solutions_notebooks/instructor/02_Regression_Solution_Ottr.Rmd
+++ b/ml-basics/02 - Regression/ottr_solutions_notebooks/instructor/02_Regression_Solution_Ottr.Rmd
@@ -520,7 +520,18 @@ failure_message: Almost there. Ensure your recipe specification will Remove the 
 
 ## Test ##
 test_that('recipe specification is correct', {
-  expect_output(print(estate_recipe), "Recipe\n\nInputs:\n\n\nOperations:\n\nDelete terms transaction_date\nVariable mutation\nCentering and scaling for all_numeric_predictors()", fixed = TRUE)
+  
+  # Test for step_rm
+  expect_equal(attr(estate_recipe[["steps"]][[1]], "class"), c("step_rm","step"))
+  expect_equal(as_label(estate_recipe[["steps"]][[1]][["terms"]][[1]]), "transaction_date")
+  
+  # Test for step_mutate
+  expect_equal(attr(estate_recipe[["steps"]][[2]], "class"), c("step_mutate","step"))
+  expect_equal(as_label(estate_recipe[["steps"]][[2]][["inputs"]][["local_convenience_stores"]]), "factor(local_convenience_stores)")
+  
+  # Test for step_normalize
+  expect_equal(attr(estate_recipe[["steps"]][[3]], "class"), c("step_normalize","step"))
+  expect_equal(as_label(estate_recipe[["steps"]][[3]][["terms"]][[1]]), "all_numeric_predictors()")
   
   
 })
@@ -597,9 +608,20 @@ rf_workflow
 " # END TEST CONFIG
 
 ## Test ##
-
-test_that('recipe specification is correct', {
-  expect_output(print(rf_workflow), "== Workflow ====================================================================\nPreprocessor: Recipe\nModel: rand_forest()\n\n-- Preprocessor ----------------------------------------------------------------\n3 Recipe Steps\n\n* step_rm()\n* step_mutate()\n* step_normalize()\n\n-- Model -----------------------------------------------------------------------\nRandom Forest Model Specification (regression)\n\nComputational engine: randomForest \n", fixed = TRUE)
+test_that('workflow specification is correct', {
+  
+  # Test for step_rm
+  expect_equal(attr(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[1]], "class"), c("step_rm","step"))
+  expect_equal(as_label(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[1]][["terms"]][[1]]), "transaction_date")
+  
+  # Test for step_mutate
+  expect_equal(attr(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[2]], "class"), c("step_mutate","step"))
+  expect_equal(as_label(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[2]][["inputs"]][["local_convenience_stores"]]), "factor(local_convenience_stores)")
+  
+  # Test for step_normalize
+  expect_equal(attr(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[3]], "class"), c("step_normalize","step"))
+  expect_equal(as_label(rf_workflow[["pre"]][["actions"]][["recipe"]][["recipe"]][["steps"]][[3]][["terms"]][[1]]), "all_numeric_predictors()")
+  
   
   
 })
