--- a/ml-basics/02 - Regression/ottr_solutions_notebooks/instructor/02_Regression_Solution_Ottr.ipynb
+++ b/ml-basics/02 - Regression/ottr_solutions_notebooks/instructor/02_Regression_Solution_Ottr.ipynb
@@ -186,7 +186,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -326,7 +328,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -466,7 +470,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -756,7 +762,18 @@
                 "\n",
                 "## Test ##\n",
                 "test_that('recipe specification is correct', {\n",
-                "  expect_output(print(estate_recipe), \"Recipe\\n\\nInputs:\\n\\n\\nOperations:\\n\\nDelete terms transaction_date\\nVariable mutation\\nCentering and scaling for all_numeric_predictors()\", fixed = TRUE)\n",
+                "  \n",
+                "  # Test for step_rm\n",
+                "  expect_equal(attr(estate_recipe[[\"steps\"]][[1]], \"class\"), c(\"step_rm\",\"step\"))\n",
+                "  expect_equal(as_label(estate_recipe[[\"steps\"]][[1]][[\"terms\"]][[1]]), \"transaction_date\")\n",
+                "  \n",
+                "  # Test for step_mutate\n",
+                "  expect_equal(attr(estate_recipe[[\"steps\"]][[2]], \"class\"), c(\"step_mutate\",\"step\"))\n",
+                "  expect_equal(as_label(estate_recipe[[\"steps\"]][[2]][[\"inputs\"]][[\"local_convenience_stores\"]]), \"factor(local_convenience_stores)\")\n",
+                "  \n",
+                "  # Test for step_normalize\n",
+                "  expect_equal(attr(estate_recipe[[\"steps\"]][[3]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(estate_recipe[[\"steps\"]][[3]][[\"terms\"]][[1]]), \"all_numeric_predictors()\")\n",
                 "  \n",
                 "  \n",
                 "})\n"
@@ -787,7 +804,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -858,7 +877,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -895,9 +916,20 @@
                 "\" # END TEST CONFIG\n",
                 "\n",
                 "## Test ##\n",
-                "\n",
-                "test_that('recipe specification is correct', {\n",
-                "  expect_output(print(rf_workflow), \"== Workflow ====================================================================\\nPreprocessor: Recipe\\nModel: rand_forest()\\n\\n-- Preprocessor ----------------------------------------------------------------\\n3 Recipe Steps\\n\\n* step_rm()\\n* step_mutate()\\n* step_normalize()\\n\\n-- Model -----------------------------------------------------------------------\\nRandom Forest Model Specification (regression)\\n\\nComputational engine: randomForest \\n\", fixed = TRUE)\n",
+                "test_that('workflow specification is correct', {\n",
+                "  \n",
+                "  # Test for step_rm\n",
+                "  expect_equal(attr(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[1]], \"class\"), c(\"step_rm\",\"step\"))\n",
+                "  expect_equal(as_label(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[1]][[\"terms\"]][[1]]), \"transaction_date\")\n",
+                "  \n",
+                "  # Test for step_mutate\n",
+                "  expect_equal(attr(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[2]], \"class\"), c(\"step_mutate\",\"step\"))\n",
+                "  expect_equal(as_label(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[2]][[\"inputs\"]][[\"local_convenience_stores\"]]), \"factor(local_convenience_stores)\")\n",
+                "  \n",
+                "  # Test for step_normalize\n",
+                "  expect_equal(attr(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[3]], \"class\"), c(\"step_normalize\",\"step\"))\n",
+                "  expect_equal(as_label(rf_workflow[[\"pre\"]][[\"actions\"]][[\"recipe\"]][[\"recipe\"]][[\"steps\"]][[3]][[\"terms\"]][[1]]), \"all_numeric_predictors()\")\n",
+                "  \n",
                 "  \n",
                 "  \n",
                 "})\n"
@@ -1141,17 +1173,6 @@
                 "\n",
                 "[Eric](https://twitter.com/ericntay), Gold Microsoft Learn Student Ambassador.\n"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "library(here)\n",
-                "library(rmd2jupyter)\n",
-                "rmd2jupyter(\"02_Regression_Solution_Ottr.Rmd\")\n"
-            ]
         }
     ],
     "metadata": {
@@ -1159,6 +1180,7 @@
         "kernelspec": {
             "display_name": "R",
             "langauge": "R",
+            "language": "R",
             "name": "ir"
         },
         "language_info": {
