--- a/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.ipynb
+++ b/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.ipynb
@@ -17,7 +17,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Load the packages in the tidyverse into the current R session\n",
+                "# Load packages that you'll require in this adventure\n",
                 "suppressPackageStartupMessages({\n",
                 "  library(tidyverse)\n",
                 "  library(summarytools)\n",
