--- a/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.Rmd
+++ b/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.Rmd
@@ -19,7 +19,7 @@ A significant part of a a data scientist's role is to explore, analyze, and visu
 Let's start by loading the required packages.
 
 ```{r}
-# Load the packages in the tidyverse into the current R session
+# Load packages that you'll require in this adventure
 suppressPackageStartupMessages({
   library(tidyverse)
   library(summarytools)
